2.6.3
made chaos orbs not activate instability break chance
made all base player stats (by config) scale normally again
2.6.2 
fixed armor not getting damaged.
2.6.1
fixed a crash on loot generation
2.6.0
This could be called the hardcore update! I know a lot of you won't like any of this so i kept most of it configurable:

* INSTABILITY! Gear items have this value and as you use currency items the instability increases. 
The higher the instability the higher the break chance. This means the more you modify the item, the more likely it will break. 
Some items like Chaos Orb reduce instability. If any other item would do this, it'd be an item like the chaos orb that has a chance to make the item worse. (you're encouraged to risk it)
-Now the why. Because it adds SCARCITY. And this will be the theme of more of my mods (if i can get some good ideas). Basically, to ensure BIS (Best in Slot) items are very hard to get.
And to stop the gameplay of farming currencies at endgame to just reroll your existing items into perfection.

* STAT GROWTH FORMULA CHANGES! now instead of stats being x * level. They are in a different formula that makes them grow slower at low lvls (lvl 2 mobs are no longer 2 times stronger than lvl 1) but a lvl 100 mob is now MUCH stronger than a lvl 90.
(this will likely lead to bugs! Beware of weirdness in stats and battle)

* COMBAT OVERHAUL! 
there is no longer many dmg numbers for every element you do, it's all combined into 1 now. (highest dmg element is shown)
i changed internal code of it, could be buggy
swords now work like vanilla ones and do aoe

* New Config: REPAIR RESTRICTION
This makes it so items from my mod can only be repaired with other items from my mod. This also goes with the scarcity in mind ideal of the update but i will keep it off by default-
because i think too many people would be asking why their mending enchant doesn't work or why they can't repair their gear with x method.