@@ -1,15 +1,15 @@
 package com.robertx22.mine_and_slash.database.runewords.slots_4;
 
-import com.robertx22.mine_and_slash.database.runewords.RuneWord;
-import com.robertx22.mine_and_slash.database.stats.StatMod;
-import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.HealthFlat;
-import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.HealthRegenFlat;
-import com.robertx22.mine_and_slash.database.stats.stat_mods.percent.ArmorPercent;
 import com.robertx22.mine_and_slash.database.items.runes.BerItem;
 import com.robertx22.mine_and_slash.database.items.runes.CenItem;
 import com.robertx22.mine_and_slash.database.items.runes.ItaItem;
 import com.robertx22.mine_and_slash.database.items.runes.VohItem;
 import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
+import com.robertx22.mine_and_slash.database.runewords.RuneWord;
+import com.robertx22.mine_and_slash.database.stats.StatMod;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.HealthFlat;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.HealthRegenFlat;
+import com.robertx22.mine_and_slash.database.stats.stat_mods.percent.ArmorPercent;
 
 import java.util.Arrays;
 import java.util.List;
@@ -18,7 +18,7 @@ public class RuneWordMountain extends RuneWord {
 
     @Override
     public List<StatMod> mods() {
-        return Arrays.asList(new HealthFlat(), new ArmorPercent(), new HealthRegenFlat());
+        return Arrays.asList(new HealthFlat().multi(0.5F), new ArmorPercent(), new HealthRegenFlat());
     }
 
     @Override
