@@ -1,5 +1,7 @@
 package com.robertx22.mine_and_slash.database.runewords.slots_5;
 
+import com.robertx22.mine_and_slash.database.items.runes.*;
+import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
 import com.robertx22.mine_and_slash.database.runewords.RuneWord;
 import com.robertx22.mine_and_slash.database.stats.StatMod;
 import com.robertx22.mine_and_slash.database.stats.stat_mods.AllTraitMods;
@@ -7,8 +9,6 @@ import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.Heal
 import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.HealthRegenFlat;
 import com.robertx22.mine_and_slash.database.stats.stat_mods.flat.resources.ManaRegenFlat;
 import com.robertx22.mine_and_slash.database.stats.stat_types.spell_buff_traits.PurityTrait;
-import com.robertx22.mine_and_slash.database.items.runes.*;
-import com.robertx22.mine_and_slash.database.items.runes.base.BaseRuneItem;
 
 import java.util.Arrays;
 import java.util.List;
@@ -17,7 +17,8 @@ public class RuneWordPurity extends RuneWord {
 
     @Override
     public List<StatMod> mods() {
-        return Arrays.asList(new AllTraitMods(new PurityTrait()), new HealthRegenFlat(), new HealthFlat(), new ManaRegenFlat());
+        return Arrays.asList(new AllTraitMods(new PurityTrait()), new HealthRegenFlat(), new HealthFlat()
+                .multi(0.7f), new ManaRegenFlat());
     }
 
     @Override
